tooling/nargo_cli/tests/snapshots/execution_success/lambda_from_global_array/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global FN_ARRAY: [fn() -> Field; 2] = [f1, f2];

fn main(x: u32, y: Field) {
    assert(FN_ARRAY[x]() == y);
}

fn f1() -> Field {
    1
}

fn f2() -> Field {
    2
}
